update to 1.21.7
somewhat experimental late registration of DuplexHandlerImpl due to paper login event deprecation.
Consolidate some shared logic
Better error handling
Improve timings
Use adventure for messages